...
        android:backgroundTint="#F4F2E6"
        app:layout_constraintBottom_toTopOf="@+id/navbarContainer"
        app:layout_constraintTop_toTopOf="parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/feed_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <EditText
                android:id="@+id/editText_search"
...
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/divider_toggle_list">

                <ImageView
                    android:id="@+id/filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="8dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="28dp"
                    android:layout_marginBottom="8dp"
...
