<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"


    android:background="@drawable/blue_gradient_background"


    android:elevation="2dp"

    android:orientation="vertical"
    android:padding="16dp">


    <!-- Top bar -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="Owl icon"
            android:src="@drawable/ic_owl" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/inter_medium"
            android:gravity="center"
            android:text="moodly"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/closeIcon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:contentDescription="Close"
            android:src="@drawable/baseline_cancel_24" />
    </LinearLayout>


    <!-- Bottom row (Back, Save) -->
    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/inter_medium"
        android:text="Would you like to talk about it over a moodle bowl?"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp" />


    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/inter"
        android:text="You can write about you experience, or show it with a picture instead."
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text203"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxCornerRadiusBottomEnd="16dp"
        app:boxCornerRadiusBottomStart="16dp"
        app:boxCornerRadiusTopEnd="16dp"
        app:boxCornerRadiusTopStart="16dp">

        <com.google.android.material.textfield.TextInputEditText

            android:id="@+id/reason"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="What's going on?"
            android:maxHeight="60dp" />
    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/charCount"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:textAlignment="viewEnd" />


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="299dp"
        android:layout_height="302dp"

        android:layout_marginLeft="45dp"
        android:layout_marginTop="24dp"
        android:background="#0D0D0000"
        android:elevation="4dp"
        android:padding="0dp"
        android:scaleType="centerCrop" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center">

        <Button
            android:id="@+id/btnBackEnvironment"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/black"
            android:text="Back"
            android:textSize="14sp"
            app:cornerRadius="16dp" />

        <Button
            android:id="@+id/btnNext"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:backgroundTint="@color/black"
            android:text="Review"
            android:textSize="14sp"
            app:cornerRadius="16dp" />
    </LinearLayout>
</LinearLayout>